# SJPHY

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: .gitignore  experiments.md
experiments/实验2-1.磁性材料基本特性研究/: main.ipynb
experiments/实验2-2.液氮比汽化热的测量/: main.ipynb
experiments/实验2-2.磁性材料基本特性研究/: main.ipynb
experiments/实验2-3.RLC串联电路特性的研究/: main.ipynb
experiments/实验2-3.液氮比汽化热的测量/: main.ipynb
experiments/实验2-4.迈克尔逊干涉仪的调整与使用/: main.ipynb
experiments/实验2-5.非平衡电桥的应用/: data.example.yaml  init.py  main.ipynb
lib/: .gitignore  __init__.py  pyproject.toml
lib/graphing/: __init__.py  font.py  origin.py  units.py  utils.py
lib/me/: __init__.py
lib/richer/components/: __init__.py  input.py  select.py
lib/richer/utils/: __init__.py  console.py
